# MacroCockpit

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  IDEAS.md  Makefile  README.md  SPEC.md
.devcontainer/: devcontainer.json
config/: regime.yaml
docker/: docker-compose.yml  fetcher.Dockerfile  web.Dockerfile
docs/: indicators.md
fetcher/: pyproject.toml
fetcher/src/fetcher/: __init__.py  main.py  registry.py  scheduler.py  store.py
fetcher/src/fetcher/sources/: __init__.py  boj.py  customs.py  estat.py  estat_dashboard.py  fred.py  ib.py  mof.py  yahoo.py
fetcher/tests/: test_boj.py  test_customs.py  test_estat.py  test_estat_dashboard.py  test_fred.py  test_ib.py  test_main.py  test_main_fallback.py  test_mof.py  test_registry.py  test_scheduler.py  test_store.py  test_yahoo.py
scripts/: crontab.example
web/: README.md  next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: IndicatorPanel.tsx  RegimeStrip.tsx
web/lib/: db.ts  panels.test.ts  panels.ts  regime.test.ts  regime.ts  types.ts
