[project]
name = "fetcher"
version = "0.0.0"
description = "Macro Cockpit data fetcher (FRED / Yahoo / IB -> SQLite)"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "requests",
    "python-dotenv",
    "yfinance",
    "ib_async",
]

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fetcher"]

[tool.pytest.ini_options]
testpaths = ["tests"]
